# MLOpsWorldCup2026

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: simulation.yaml  training.yaml
docs/: deployment.md  monitoring.md
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_experiments.ipynb
scripts/: deploy_prefect.py  predict_champion.py  run_pipeline.py
src/worldcup2026/: __init__.py  cli.py  config.py  logging_utils.py
src/worldcup2026/api/: app.py
src/worldcup2026/data/: __init__.py  ingest.py  preprocess.py  validate.py
src/worldcup2026/features/: build_features.py  elo.py
src/worldcup2026/models/: predict.py  train.py
src/worldcup2026/monitoring/: __init__.py  drift.py  metrics.py
src/worldcup2026/pipeline/: __init__.py  flow.py
src/worldcup2026/simulation/: __init__.py  tournament.py
tests/: conftest.py
tests/unit/: test_api.py  test_drift.py  test_elo.py  test_features.py  test_tournament.py  test_validate.py
